# socketutils

./: CMakeLists.txt  LICENSE  README.md
header/: sockettee.h
src/: sockettee.c
tests/: socketredirector_test.c
